--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -32,7 +32,7 @@
   <!-- Home -->
   <section id="home" class="home-section">
     <div id="video_container" class="video-bg-slider"></div>
-    <!-- <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div> -->
+     <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div> 
     <div class="container slidero">
       <div class="row">
         <div class="col-md-12">
