--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -16,6 +16,10 @@
     <h2>Sign Up</h2>
     <form method="POST" action="/user/signup" class="register-form">
       <p>
+        <label for="avatar-input">Enter a url for your avatar:</label>
+        <input class="input avatar-input" type="text" name="avatar_url">
+      </p>
+      <p>
         <label for="username-input">Enter a username:</label>
         <input class="input username-input" type="text" name="username">
       </p>
