login bug fixes and enhancement

--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -35,7 +35,7 @@
     </div>
 
     <% if (process.env.NODE_ENV === 'production') { %>
-      <script src="/scripts/chat.js"></script>
+      <script src="/chatReact/chat.js"></script>
     <% } else { %>
       <script src="http://localhost:10001/chat.js"></script>
     <% } %>
