--- a/server/views/search.ejs
+++ b/server/views/search.ejs
@@ -20,7 +20,7 @@
   <div id="react-root"></div>
   <script src="/socket.io/socket.io.js"></script>
   <% if (process.env.NODE_ENV === 'production') { %>
-    <script src="/scripts/bundle.js"></script>
+    <script src="/searchReact/bundle.js"></script>
   <% } else { %>
     <script src="http://localhost:10002/bundle.js"></script>
   <% } %>
