partial standardlize and pet profile page populate

--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -1,12 +1,12 @@
 <div class="smalldetails">
 	<div class="smalldetails-header">
-		<h3 class="smalldetails-title"><%= pup.events.title %></h3>
+		<h3 class="smalldetails-title"><%= event.title %></h3>
 		<span class="smalldetails-attendees">10 Going</span>
 	</div>
 	<div class="smalldetails-body">
-		<span class="smalldetails-date"><%= pup.events.event_time %></span>
-		<span class="smalldetails-location"><%= pup.events.location %></span>
-		<span class="smalldetails-location"><%= pup.events.description %></span>
+		<span class="smalldetails-date"><%= event.event_time %></span>
+		<span class="smalldetails-location"><%= event.location %></span>
+		<span class="smalldetails-location"><%= event.description %></span>
 	</div>
 	<div class="smalldetails-footer">
 		<span class="smalldetails-rsvp">
