--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -18,14 +18,14 @@
       <div class="row">
         <div class="col-md-3">
           <% for (var i = 0; i < pupsIDs.length; i++) { %>
-            <%= data[i].pups.name %>
-            <%= const pup = data[i].pups %>
+            <% data[i].pups.name; %>
+            <% const pup = data[i].pups; %>
             <% include partials/_puppy.ejs %>
           <% } %>
           <a href="/pet/new">Add New Pups</a>
         </div>
         <div class="col-md-6 text-center">
-          <% const owner = data[0]%>
+          <% const owner = data[0];%>
           <% include partials/_owner.ejs %>
         </div>
         <div class="col-md-3 text-right">
