--- a/server/views/partials/_event_pup.ejs
+++ b/server/views/partials/_event_pup.ejs
@@ -1,7 +1,7 @@
 <div class="owner-card">
   <div class="owner-box">
-      <a href="pet/<%item.id%>">
-        <img class="owner-avatar" src="<%= item.avatar_url %>" style="width:80px">
+      <a href="/pet/<%=item.id%>">
+        <img class="pup-avatar" src="<%= item.avatar_url %>" style="width:80px">
         <h5 class="listContent"><%= item.name %></h5>
       </a>
     </div>
