--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -22,6 +22,7 @@
               <%=user.username%>
             </a>
           </li>
+          <li><a href="/events/new">Create event</a></li>
           
           <li><a href="/user/logout">Log out</a></li>
 
