--- a/server/views/partials/_puppy.ejs
+++ b/server/views/partials/_puppy.ejs
@@ -1,7 +1,9 @@
 <div class="puppy-card">
   <div class="puppy-box">
+    <a href="/pet/<%=pup.id%>">
     <img src="<%= pup.avatar_url %>" style="width:200px">
-    <h2><%= pup.name %></h2>
+      <h2><%= pup.name %></h2>
+    </a>
     <p><%= pup.breed %></p>
     <p><%= pup.age %> years old</p>
     <% if (pup.sex == 'male') {%>
