minor changes to create-event

--- a/server/views/event_create.ejs
+++ b/server/views/event_create.ejs
@@ -25,7 +25,7 @@
       </p>
       <p>
         <label for="restrictions-input">Enter restrictions if you wish to specify any</label>
-        <input class="input restrictions-input" type="text" placeholder="eg. Only big dogs" name="restrictions">
+        <input class="input restriction-input" type="text" placeholder="eg. Only big dogs" name="restriction">
       </p>
       <p>
         <label for="location-input">Enter a location for your event</label>
