--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -11,18 +11,18 @@
   <!-- Youtube CSS -->
   <link href="/styles/css/YTPlayer.css" rel="stylesheet" type="text/css" />
   <!--external css-->
-   <link href="/styles/css/simple-line-icons.css" rel="stylesheet" /> 
+   <link href="/styles/css/simple-line-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- Custom styles for this template -->
   <link href="/styles/css/style.css" rel="stylesheet">
-  <link href="/styles/build/main.css" rel="stylesheet">  
+  <link href="/styles/build/main.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-offset="80">
     <!-- Preloader -->
   <div class="animationload">
     <div class="loader">&nbsp;</div>
-  </div> 
+  </div>
   <!-- End Preloader -->
 
   <!-- Header -->
@@ -32,15 +32,15 @@
   <!-- Home -->
   <section id="home" class="home-section">
     <div id="video_container" class="video-bg-slider"></div>
-     <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div> 
+     <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div>
     <div class="container slidero">
       <div class="row">
         <div class="col-md-12">
-           <h1 class="intro-title">Join a community<span class="element" data-elements="for your puppy"></span></h1> 
-          <p class="intro-text">Some sub heading</p>
+           <h1 class="intro-title">Find pals for your pup<span class="element" data-elements="for your puppy"></span></h1>
+          <p class="intro-text"></p>
           <div class="btn-bar">
-            <a href="/events" class="btn btn-custom-outline">Find a Meetup</a>
-            <a href="/events/new" class="btn btn-custom-outline">Create a Meetup</a>
+            <a href="/events" class="btn btn-custom-outline">Find a Pup-pal Party</a>
+            <a href="/events/new" class="btn btn-custom-outline">Create a Pup-pal Party</a>
           </div>
         </div>
         <!-- /col -->
