--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
   <div class="container">
     <div class="navbar-header">
@@ -7,7 +8,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-      <a class="navbar-brand" href="/">Pup-Pals</a>
+      <a class="navbar-brand" href="/">
+      <font color="deeppink">P</font>
+      <font color="1CD4B0">u</font>
+      <font color="F3B880">p</font>
+      <font color="deeppink"><i class="fa fa-paw"></i></font>
+      <font color="F3B880">p</font>
+      <font color="1CD4B0">a</font>
+      <font color="deeppink">l</font>
+      <font color="1CD4B0">s</font>
+      </a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -23,7 +33,7 @@
             </a>
           </li>
           <li><a href="/events/new">Create event</a></li>
-          
+
           <li><a href="/user/logout">Log out</a></li>
 
         <%}%>
