adds event attendant number query, render all events user is attending on user-profile

--- a/styles/src/smalldetails.scss
+++ b/styles/src/smalldetails.scss
@@ -16,7 +16,7 @@
 }
 
 .smalldetails-container:hover {
-  transform: scale(1.01); 
+  transform: scale(1.01);
 }
 
 .smalldetails-header {
@@ -25,7 +25,7 @@
   padding: 6px 12px;
   width: 100%;
   align-items: center;
-  background: deeppink;
+  background: black;
   height: 2.5em;
 }
 
