--- a/server/views/partials/_event_2.ejs
+++ b/server/views/partials/_event_2.ejs
@@ -1,7 +1,7 @@
 <div class="smalldetails">
   <div class="smalldetails-header">
     <h3 class="smalldetails-title"><%= ev.title %></h3>
-    <span class="smalldetails-attendees">10 Going</span>
+    <span class="smalldetails-attendees"><%= ev.count %> Going</span>
   </div>
   <div class="smalldetails-body">
     <span class="smalldetails-date"><%= ev.event_time %></span>
