added most popular park and featured event

--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -9,14 +9,14 @@
             <span class="icon-bar"></span>
           </button>
       <a class="navbar-brand" href="/">
-      <font color="deeppink">P</font>
-      <font color="1CD4B0">u</font>
-      <font color="F3B880">p</font>
-      <font color="deeppink"><i class="fa fa-paw"></i></font>
-      <font color="F3B880">p</font>
-      <font color="1CD4B0">a</font>
-      <font color="deeppink">l</font>
-      <font color="1CD4B0">s</font>
+      <font color="#126B85">P</font>
+      <font color="#AEDCD5">u</font>
+      <font color="#AD3642">p</font>
+      <font color="lightgrey"><i class="fa fa-paw"></i></font>
+      <font color="#126B85">p</font>
+      <font color="#AEDCD5">a</font>
+      <font color="#AD3642">l</font>
+      <font color="#126B85">s</font>
       </a>
     </div>
 
