--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -11,7 +11,7 @@
   <!-- Youtube CSS -->
   <link href="/styles/css/YTPlayer.css" rel="stylesheet" type="text/css" />
   <!--external css-->
-   <link href="/styles/css/simple-line-icons.css" rel="stylesheet" />
+  <link href="/styles/css/simple-line-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- Custom styles for this template -->
   <link href="/styles/css/style.css" rel="stylesheet">
@@ -54,8 +54,25 @@
     <!-- FUN-FACTS -->
     <section class="fun-facts bg-dark" id="fun-facts">
       <div class="container">
-        <div class="col-md-6 col-md-offset-3 text-center">
-          <h1>Featured Meetup</h1>
+        <div class="col-md-5 text-center">
+          <h1 class="featured-heading"><i class="fa fa-handshake-o" aria-hidden="true"></i> Featured Meetup</h1>
+            <div class="featured-body">
+              <h1 class="featured-title">National Dog Day</h1>
+              <span class="featured-date"><i class="fa fa-clock-o" aria-hidden="true"></i> <Moment format="ddd MMMM Do YYYY">Saturday August 26 2017</Moment></span>
+              <span class="featured-time"><Moment format="h:mm a">12:00 pm</Moment></span>
+              <span class="featured-location"><i class="fa fa-map-marker" aria-hidden="true"></i> Charleson Park</span>
+              <img class="featured-img" src="/styles/img/1.png" alt="">
+            </div>
+        </div>
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-5 text-center"> 
+          <h1 class="featured-heading"><i class="fa fa-star" aria-hidden="true"></i></i> Most Popular Park</h1>
+            <div class="featured-body">
+              <h1 class="featured-title">Spanish Banks Park</h1>
+              <br>
+              <a href="https://www.google.ca/maps/dir//Spanish+Banks+Beach+Park,+4801+NW+Marine+Dr,+Vancouver,+BC+V6T+1E2/@49.2768953,-123.2196682,17z/data=!4m15!1m6!3m5!1s0x5486729281cc092d:0x886c0a9a6aa169d!2sSpanish+Banks+Beach+Park!8m2!3d49.2768918!4d-123.2174795!4m7!1m0!1m5!1m1!1s0x5486729281cc092d:0x886c0a9a6aa169d!2m2!1d-123.2174795!2d49.2768918?hl=en" target="_blank"><img class="featured-map" src="/styles/img/2.png" alt=""></a>
+            </div>
         </div>
       </div>
       <!--  /container -->
@@ -119,8 +136,6 @@
     </script>
     <!-- EasyPieChart -->
     <script src="/styles/js/jquery.circliful.min.js"></script>
-    <!-- Typed -->
-    <!-- <script src="/styles/js/typed.js" type="text/javascript"></script> -->
     <!-- Custom -->
     <script src="/styles/js/app.js" type="text/javascript"></script>
 
