--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -61,7 +61,7 @@
               <span class="featured-date"><i class="fa fa-clock-o" aria-hidden="true"></i> <Moment format="ddd MMMM Do YYYY">Saturday August 26 2017</Moment></span>
               <span class="featured-time"><Moment format="h:mm a">12:00 pm</Moment></span>
               <span class="featured-location"><i class="fa fa-map-marker" aria-hidden="true"></i> Charleson Park</span>
-              <img class="featured-img" src="/styles/img/1.png" alt="">
+              <img class="featured-img" src="/styles/pictures/1.png" alt="">
             </div>
         </div>
         <div class="col-md-2">
@@ -71,7 +71,7 @@
             <div class="featured-body">
               <h1 class="featured-title">Spanish Banks Park</h1>
               <br>
-              <a href="https://www.google.ca/maps/dir//Spanish+Banks+Beach+Park,+4801+NW+Marine+Dr,+Vancouver,+BC+V6T+1E2/@49.2768953,-123.2196682,17z/data=!4m15!1m6!3m5!1s0x5486729281cc092d:0x886c0a9a6aa169d!2sSpanish+Banks+Beach+Park!8m2!3d49.2768918!4d-123.2174795!4m7!1m0!1m5!1m1!1s0x5486729281cc092d:0x886c0a9a6aa169d!2m2!1d-123.2174795!2d49.2768918?hl=en" target="_blank"><img class="featured-map" src="/styles/img/2.png" alt=""></a>
+              <a href="https://www.google.ca/maps/dir//Spanish+Banks+Beach+Park,+4801+NW+Marine+Dr,+Vancouver,+BC+V6T+1E2/@49.2768953,-123.2196682,17z/data=!4m15!1m6!3m5!1s0x5486729281cc092d:0x886c0a9a6aa169d!2sSpanish+Banks+Beach+Park!8m2!3d49.2768918!4d-123.2174795!4m7!1m0!1m5!1m1!1s0x5486729281cc092d:0x886c0a9a6aa169d!2m2!1d-123.2174795!2d49.2768918?hl=en" target="_blank"><img class="featured-map" src="/styles/pictures/2.png" alt=""></a>
             </div>
         </div>
       </div>
