Colour changes, applied colour palette agreed upon by all 4

--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -9,14 +9,14 @@
             <span class="icon-bar"></span>
           </button>
       <a class="navbar-brand" href="/">
-      <font color="deeppink">P</font>
-      <font color="1CD4B0">u</font>
-      <font color="F3B880">p</font>
-      <font color="deeppink"><i class="fa fa-paw"></i></font>
-      <font color="F3B880">p</font>
-      <font color="1CD4B0">a</font>
-      <font color="deeppink">l</font>
-      <font color="1CD4B0">s</font>
+      <font color="#d7a29e">P</font>
+      <font color="#9aa099">u</font>
+      <font color="##abc9bd">p</font>
+      <font color="e8d8bf"><i class="fa fa-paw"></i></font>
+      <font color="#9aa099">p</font>
+      <font color="##abc9bd">a</font>
+      <font color="#d7a29e">l</font>
+      <font color="#9aa099">s</font>
       </a>
     </div>
 
