--- a/styles/src/smalldetails.scss
+++ b/styles/src/smalldetails.scss
@@ -15,7 +15,7 @@
 }
 
 .smalldetails-container:hover {
-  transform: scale(1.01); 
+  transform: scale(1.01);
 }
 
 .smalldetails-header {
@@ -24,7 +24,7 @@
   padding: 6px 12px;
   width: 100%;
   align-items: center;
-  background: deeppink;
+  background: #595a6d;
   height: 2.5em;
 }
 
