pup and owner object reconstruct

--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -27,12 +27,14 @@
       <h3>Pup-pals coming</h3>
       <% users.forEach((item) => {%>
         <% include partials/_event_goer.ejs %>
+        <%if(item.pups.length != 0){%>
+          <p>And his/her pups</p>
+          <% item.pups.forEach((item) => {%>
+            <% include partials/_event_pup.ejs %>
+          <% })%>
+        <%}%>
+        <h4>~~~~Some kind of cut-of line~~~~~</h4>
       <% })%>
-      <h4>~~~~Some kind of cut-of line~~~~~</h4>
-      <% pups.forEach((item) => {%>
-        <% include partials/_event_pup.ejs %>
-      <% })%>
-
 
       <div id="react-root">
 
