--- a/server/views/partials/_owner.ejs
+++ b/server/views/partials/_owner.ejs
@@ -1,6 +1,6 @@
 <div class="owner-card">
   <div class="owner-box">
-      <img class="owner-avatar" src="<%= data[0].avatar_url %>" style="width:200px">
+      <img class="owner-avatar" src="<%= owner.avatar_url %>" style="width:200px">
       <h2 class="listContent"><%= owner.username %></h2>
       <h4><%= owner.name %></h4>
       <p><%= owner.status %></p>
