--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -15,6 +15,10 @@
   <div class="registerdiv">
     <div class="container-fluid">
       <div class="row">
+        <div class = "col-md-3">
+          <%const owner = user[0]%>
+          <% include partials/_owner.ejs%>
+        </div>
         <div class="col-md-6 text-center">
           <% include partials/_puppy.ejs %>
         </div>
@@ -22,7 +26,6 @@
           <%pup.events.forEach((event) => {%>
             <% include partials/_event.ejs %>
           <%});%>
-
         </div>
       </div>
     </div>
