Changes wording of home page for branding purposes

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -36,11 +36,11 @@
       <div class="container slidero">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="intro-title">Join a community<span class="element" data-elements="for your puppy"></span></h1>
-            <p class="intro-text">Some sub heading</p>
+            <h1 class="intro-title">Pups Need Pals<span class="element" data-elements="for your puppy"></span></h1>
+            <p class="intro-text"></p>
             <div class="btn-bar">
-              <a href="/events" class="btn btn-custom-outline">Find a Meetup</a>
-              <a href="/events/new" class="btn btn-custom-outline">Create a Meetup</a>
+              <a href="/events" class="btn btn-custom-outline">Find a Pup Party</a>
+              <a href="/events/new" class="btn btn-custom-outline">Create a Pup Party</a>
             </div>
           </div>
           <!-- /col -->
@@ -66,7 +66,7 @@
         </div>
         <div class="col-md-2">
         </div>
-        <div class="col-md-5 text-center"> 
+        <div class="col-md-5 text-center">
           <h1 class="featured-heading"><i class="fa fa-star" aria-hidden="true"></i></i> Most Popular Park</h1>
             <div class="featured-body">
               <h1 class="featured-title">Spanish Banks Park</h1>
