bug fix overlapped variable name rename

--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class = "col-md-3">
-          <%const owner = user[0]%>
+          <%const owner = person[0]%>
           <% include partials/_owner.ejs%>
         </div>
         <div class="col-md-6 text-center">
