--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -8,3 +8,4 @@
 @import "map";
 @import "login-signup";
 @import "../../search-client/node_modules/react-day-picker/lib/style";
+@import "owner_profile";
