--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title></title>
+  <title>Pup-Pals</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap core CSS -->
@@ -19,34 +19,36 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">
-          <% for (var i = 0; i < pupsIDs.length; i++) { %>
-            <% const pup = data[i].pups; %>
-            <% include partials/_puppy.ejs %>
-          <% } %>
-          <%if(user && user.id == profileId){%>
-            <a href="/pet/new">Add New Pups</a>
-          <%}%>
+          <div class="left_sidebar">
+            <% for (var i = 0; i < pupsIDs.length; i++) { %>
+              <% const pup = data[i].pups; %>
+              <% include partials/_puppy.ejs %>
+            <% } %>
+            <%if(user && user.id == profileId){%>
+              <a href="/pet/new">Add New Pups</a>
+            <%}%>
+          </div>
         </div>
         <div class="col-md-6 text-center">
           <% const owner = data[0];%>
           <% include partials/_owner.ejs %>
         </div>
-        <div class="col-md-3 text-right">
-        <h3> Pup-parties created by <%= data[0].username%></h3>
-          <% if(data[0].events) { %>
-            <% for (var i = 0; i < eventsIDs.length; i++)  { %>
-              <%const event = data[i].events%>
-              <% include partials/_event.ejs %>
-            <% } %>
-          <% } else { %>
-            This user has not created any events yet.
-          <% } %>
-        </div>
-        <div class="col-md-3 text-right">
-          <h3> <%= data[0].username%> is going to these pup-parties </h3>
-             <% allEvents.forEach ((ev) => { %>
-               <% include partials/_event_2.ejs %>
-             <% }) %>
+        <div class="col-md-3 text-center">
+          <div class="profile_sidebar">
+            <h3>Created events</h3>
+              <% if(data[0].events) { %>
+                <% for (var i = 0; i < eventsIDs.length; i++)  { %>
+                  <%const event = data[i].events%>
+                  <% include partials/_event.ejs %>
+                <% } %>
+              <% } else { %>
+                This user has not created any events yet.
+              <% } %>
+            <h3>Attending events</h3>
+              <% allEvents.forEach ((ev) => { %>
+                <% include partials/_event_2.ejs %>
+              <% }) %>
+          </div>
         </div>
       </div>
     </div>
