--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -1,21 +1,23 @@
-<div class="detailcontainer"> 
-	<div class="smalldetails-container">
-		<div class="smalldetails-header">
-			<h3 class="smalldetails-title"><%= event.title %></h3>
-			<span class="smalldetails-attendees">10 Going</span>
-		</div>
-		<div class="smalldetails-body">
-			<span class="smalldetails-date"><i class="fa fa-clock-o" aria-hidden="true"></i> <%= moment(event.date_time).format("dddd MMMM Do YYYY")%></span>
-			<span class="smalldetails-location"><i class="fa fa-map-marker" aria-hidden="true"></i> <%= event.location %></span>
-			<span class="smalldetails-body"><%= event.description %></span>
-		</div>
-		<div class="smalldetails-footer">
-			<span class="smalldetails-rsvp">
-				<button type="button" class="btn btn-primary">RSVP</button>
-			</span>
-			<span class="smalldetails-calender">
-				<button type="button" class="btn btn-primary">Calender</button>
-			</span>
-		</div>
-	</div>
+<div class="detailcontainer">
+  <div class="smalldetails-container">
+    <div class="smalldetails-header">
+      <h3 class="smalldetails-title">
+        <%= ev.title %>
+      </h3>
+      <span class="smalldetails-attendees"><%= ev.count %> Going</span>
+    </div>
+    <div class="smalldetails-body">
+      <span class="smalldetails-date"><%= ev.event_time %></span>
+      <span class="smalldetails-location"><%= ev.location %></span>
+      <span class="smalldetails-location"><%= ev.description %></span>
+    </div>
+    <div class="smalldetails-footer">
+      <span class="smalldetails-rsvp">
+        <button type="button" class="btn btn-primary">RSVP</button>
+      </span>
+      <span class="smalldetails-calender">
+        <button type="button" class="btn btn-primary">Calender</button>
+      </span>
+    </div>
+  </div>
 </div>
