--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -81,7 +81,7 @@
 
     <!-- Services -->
     <section class="services" id="services">
-      <div class="container">
+<!--       <div class="container">
         <div class="row instagram-feed text-center">
           <div class="col-xs-12">
             <h1>Instagram
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="footer text-center">
