--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -1,7 +1,7 @@
 <div class="smalldetails">
 	<div class="smalldetails-header">
 		<h3 class="smalldetails-title"><%= event.title %></h3>
-		<span class="smalldetails-attendees">10 Going</span>
+		<span class="smalldetails-attendees"><%= event.count %> Going</span>
 	</div>
 	<div class="smalldetails-body">
 		<span class="smalldetails-date"><i class="fa fa-clock-o" aria-hidden="true"></i> <%= moment(event.date_time).format("dddd MMMM Do YYYY") %></span>
