--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -13,10 +13,11 @@
   <body>
     <script src="/socket.io/socket.io.js"></script>
 
-
     <% include partials/_navbar.ejs %>
+
+    <div id="map"></div>
     <div class="registerdiv">
-      <p>A map here</p>
+      <img src=<%=mapUrl%>></img>
       <h1><%= events.title %></h1>
       <h3>Location: <%= events.location%></h3>
       <h3>Time: <i class="fa fa-clock-o" aria-hidden="true"></i> <%= moment(events.date_time).format("dddd MMMM Do YYYY") %></h3>
