--- a/server/views/partials/_puppy.ejs
+++ b/server/views/partials/_puppy.ejs
@@ -5,7 +5,7 @@
       <h2><%= pup.name %></h2>
     </a>
     <p><%= pup.breed %></p>
-    <p class="pup-age">Age: <%= pup.age %> yrs</p>
+    <p>Age: <%= pup.age %> yrs</p>
     <% if (pup.sex == 'male') {%>
       <p> Boy </p>
     <% } else  { %>
