--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
   <div class="container">
     <div class="navbar-header">
@@ -9,14 +8,14 @@
             <span class="icon-bar"></span>
           </button>
       <a class="navbar-brand" href="/">
-      <font color="#d7a29e">P</font>
-      <font color="#9aa099">u</font>
-      <font color="##abc9bd">p</font>
-      <font color="e8d8bf"><i class="fa fa-paw"></i></font>
-      <font color="#9aa099">p</font>
-      <font color="##abc9bd">a</font>
-      <font color="#d7a29e">l</font>
-      <font color="#9aa099">s</font>
+      <span class="logo">P</span>
+      <span class="logo">u</span>
+      <span class="logo">p</span>
+      <span class="logo"><i class="fa fa-paw"></i></span>
+      <span class="logo">p</span>
+      <span class="logo">a</span>
+      <span class="logo">l</span>
+      <span class="logo">s</span>
       </a>
     </div>
 
@@ -25,20 +24,64 @@
         <% if(!user){%>
           <li><a href="/user/login">Login</a></li>
           <li><a href="/user/signup">Sign Up</a></li>
-        <%}else{%>
-          <li>
-            <a href="/owner/<%=user.id%>">
+          <%}else{%>
+            <li>
+              <a href="/owner/<%=user.id%>">
               <img src="<%=user.avatar_url%>" style="width:20px; height:20px">
               <%=user.username%>
             </a>
-          </li>
-          <li><a href="/events/new">Create event</a></li>
+            </li>
+            <li><a href='#' data-toggle="modal" data-target="#myModal">Create Event</a></li>
+            <li><a href="/user/logout">Log out</a></li>
+            <div class="row">
+              <div id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
 
-          <li><a href="/user/logout">Log out</a></li>
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="<modal-ti></modal-ti>tle">Create Event</h4>
+                    </div>
+                    <div class="modal-body">
+                      <form method="POST" action="/events/new" class="register-form" role="form">
+                        <p>
+                          <label for="title-input">Title</label>
+                          <input class="input form-control" type="text" name="title">
+                        </p>
+                        <p>
+                          <label for="event-input">Description</label>
+                          <textarea name="message" id="message" class="form-control" rows="5" cols="25" required="required"></textarea>
+                        </p>
+                        <p>
+                          <label for="restrictions-input">Restrictions</label>
+                          <input class="input form-control" type="text" placeholder="eg. Only big dogs" name="restriction">
+                        </p>
+                        <p>
+                          <label for="location-input">Location</label>
+                          <input class="input form-control" type="text" name="location">
+                        </p>
+                        <p>
+                          <label for="date-input">Date</label>
+                          <input class="input form-control" type="date" name="date_time">
+                        </p>
+                        <p>
+                          <label for="time-input">Time</label>
+                          <input class="input form-control" type="time" name="date_time">
+                        </p>
+                        <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
 
-        <%}%>
+                </div>
+              </div>
+              <%}%>
       </ul>
 
+      </div>
     </div>
-  </div>
 </nav>
