--- a/styles/src/smalldetails.scss
+++ b/styles/src/smalldetails.scss
@@ -23,7 +23,7 @@
   padding: 6px 12px;
   width: 100%;
   align-items: center;
-  background: #595a6d;
+  background: $event-header;
   height: 2.5em;
 }
 
