styling and modal for create event

--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -41,7 +41,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="<modal-ti></modal-ti>tle">Create Event</h4>
+                      <h4 class="modal-title">Create Event</h4>
                     </div>
                     <div class="modal-body">
                       <form method="POST" action="/events/new" class="register-form" role="form">
