--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -15,39 +15,40 @@
 
 <body>
   <% include partials/_navbar.ejs %>
-  <div class="registerdiv">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3 text-center">
-          <div class="left_sidebar">
-          <% pups.forEach(function(item){ %>
-            <% const pup = item; %>
-            <a href="/pet/<%=pup.id%>"> 
+    <div class="registerdiv">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-3 text-center">
+            <div class="left_sidebar">
+              <% pups.forEach(function(item){ %>
+                <% const pup = item; %>
+                  <a href="/pet/<%=pup.id%>"> 
                 <img class="pup-pic"src="<%= pup.avatar_url %>" style="width:100px">
                 <h2><%= pup.name %></h2>
                 </a>
-                <hr>
-          <% }) %>
-          <%if(user && user.id == profileId){%>
-            <a href="/pet/new">Add New Pups</a>
-          <%}%>
+                  <hr>
+                  <% }) %>
+                    <%if(user && user.id == profileId){%>
+                      <a href="/pet/new">Add New Pups</a>
+                      <%}%>
+            </div>
+          </div>
+          <div class="col-md-6 text-center">
+            <% const owner = person %>
+              <%= person.name%>
+                <% include partials/_owner.ejs %>
+          </div>
+          <div class="col-md-3 text-right">
+            <div class="profile_sidebar">
+              <h3>
+                <%= person.username%> is going to these pup-parties </h3>
+              <% events.forEach (function(ev){ %>
+                <% include partials/_event_2.ejs %>
+                  <% }) %>
+            </div>
           </div>
         </div>
-        <div class="col-md-6 text-center">
-          <% const owner = person %>
-          <%= person.name%>
-          <% include partials/_owner.ejs %>
-        </div>
-        <div class="col-md-3 text-right">
-          <div class="profile_sidebar">
-          <h3> <%= person.username%> is going to these pup-parties </h3>
-             <% events.forEach (function(ev){ %>
-               <% include partials/_event_2.ejs %>
-             <% }) %>
-        </div>
       </div>
-    </div>
-  </div>
 
 </body>
 
