--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -9,14 +9,14 @@
           </button>
       <a class="navbar-brand" href="/">
       <a class="navbar-brand" href="/">
-           <font color="#d7a29e">P</font>
-           <font color="#9aa099">u</font>
-           <font color="##abc9bd">p</font>
-           <font color="e8d8bf"><i class="fa fa-paw"></i></font>
-           <font color="#9aa099">p</font>
-           <font color="##abc9bd">a</font>
-           <font color="#d7a29e">l</font>
-           <font color="#9aa099">s</font>
+           <span class="logo">P</span>
+           <span class="logo">u</span>
+           <span class="logo">p</span>
+           <span class="logo"><i class="fa fa-paw"></i></span>
+           <span class="logo">p</span>
+           <span class="logo">a</span>
+           <span class="logo">l</span>
+           <span class="logo">s</span>
            </a>
       </a>
     </div>
