--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -24,7 +24,7 @@
           <% include partials/_puppy.ejs %>
         </div>
         <div class="col-md-3 text-right">
-          <%pup.events.forEach((event) => {%>
+          <%pup.events.forEach((ev) => {%>
             <% include partials/_event.ejs %>
           <%});%>
         </div>
