--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -48,7 +48,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title">Create Event</h4>
+                      <h4 class="modal-title"><i class="fa fa-paw" aria-hidden="true"></i> Create Event</h4>
                     </div>
                     <div class="modal-body">
                       <form method="POST" action="/events/new" class="register-form" role="form">
