--- a/server/views/event_create.ejs
+++ b/server/views/event_create.ejs
@@ -29,8 +29,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <legend><i class="fa fa-paw modal-header"></i></a> Create Event</legend>
-                 <h4 class="fa fa-paw modal title">Create Event</h4> 
+                <legend><i class="fa fa-paw modal-header"></i> Create Event</legend>
+                <i class="fa fa-paw" aria-hidden="true"></i>
+
+                 <h4 class="fa fa-paw modal title">Create Event</h4>
               </div>
               <div class="modal-body">
                 <form method="POST" action="/events/new" class="register-form" role="form">
