--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -17,24 +17,28 @@
     <div class="container">
       <div class="row">
         <div class="registerdiv">
-          <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
+          <div class="col-md-6 col-md-offset-3 well well-sm">
             <div class="create-event form-group">
-              <h2>Log in</h2>
+              <h2><i class="fa fa-paw" aria-hidden="true"></i> Log in</h2>
               <%if(error){%>
                 <h4>
                   <%= error%>
                 </h4>
                 <%}%>
-                  <form method="POST" action="/user/login" class="register-form">
+                  <form method="POST" action="/user/login" class="form-group">
                     <p>
-                      <label for="email-input">Email:</label>
-                      <input class="input email-input" type="email" name="email">
+                      <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                        <input class="form-control" type="email" name="email" placeholder="Email">
+                      </div>
                     </p>
                     <p>
-                      <label for="password-input">Password:</label>
-                      <input class="input password-input" type="password" name="password">
+                      <div class="input-group">                      
+                        <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                        <input class="form-control" type="password" name="password" placeholder="Password">
+                      </div>
                     </p>
-                    <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+                    <button type="submit" class="btn btn-lg btn-primary btn-block">Login</button>
                   </form>
             </div>
           </div>
