--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -1,21 +1,24 @@
-<div class="smalldetails">
-  <a href="/events/<%=event.id%>">
-  <div class="smalldetails-header">
-    <h3 class="smalldetails-title"><%= event.title %></h3>
-    <span class="smalldetails-attendees"><%= event.count %> Going</span>
-  </div>
-  </a>
-  <div class="smalldetails-body">
-    <span class="smalldetails-date"><i class="fa fa-clock-o" aria-hidden="true"></i> <%= moment(event.date_time).format("dddd MMMM Do YYYY") %></span>
-    <span class="smalldetails-location"><i class="fa fa-map-marker" aria-hidden="true"></i> <%= event.location %></span>
-    <span class="smalldetails-location"><%= event.description %></span>
-  </div>
-  <div class="smalldetails-footer">
-    <span class="smalldetails-rsvp">
-      <button type="button" class="btn btn-primary">RSVP</button>
-    </span>
-    <span class="smalldetails-calender">
-      <button type="button" class="btn btn-primary">Calender</button>
-    </span>
+<div class="detailcontainer">
+  <div class="smalldetails-container">
+    <a href="/events/<%=event.id%>">
+    <div class="smalldetails-header">
+      <h3 class="smalldetails-title"><%= event.title %></h3>
+      <span class="smalldetails-attendees"><%= event.count %> Going</span>
+    </div>
+    </a>
+    <div class="smalldetails-body">
+      <span class="smalldetails-date"><i class="fa fa-clock-o" aria-hidden="true"></i> <%= moment(event.date_time).format("ddd MMMM Do YYYY") %></span>
+      <span class="smalldetails-time"> <%= moment(event.date_time).format("h:mm a") %></span>      
+      <span class="smalldetails-location"><i class="fa fa-map-marker" aria-hidden="true"></i> <%= event.location %></span>
+      <span class="smalldetails-body"><i class="fa fa-sticky-note" aria-hidden="true"></i> <%= event.description %></span>
+    </div>
+    <div class="smalldetails-footer">
+      <span class="smalldetails-rsvp">
+        <button type="button" class="btn btn-primary">RSVP</button>
+      </span>
+      <span class="smalldetails-calender">
+        <button type="button" class="btn btn-primary">Calender</button>
+      </span>
+    </div>
   </div>
 </div>
