--- a/styles/src/color.scss
+++ b/styles/src/color.scss
@@ -1,4 +1,4 @@
-$navbar-color: #ffffff;
-$navbar-text: #595a6d;
-$event-header: #595a6d;
+$navbar-color: #77c9d4;
+$navbar-text: white;
+$event-header: #3682BC;
 
