--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -14,7 +14,6 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <% include partials/_navbar.ejs %>
-
     <div id="map"></div>
     <div class="registerdiv">
       <img src=<%=mapUrl%>></img>
@@ -36,16 +35,12 @@
         <%}%>
         <h4>~~~~Some kind of cut-off line~~~~~</h4>
       <% })%>
-      <% if (error) {%>
-        <%= error %>
-      <% } %>
-      <%= id %>
+      <p><%= message %></p>
       <form action="/events/:id" method="POST" >
-          <input type="hidden" name="event_id" value="<%= id %>">
+          <input type="hidden" name="eventId" value="<%= id %>">
           <button type="submit" class="btn btn-primary">RSVP</button>
       </form>
       <div id="react-root">
-
       </div>
     </div>
 
